# aichallenge2023-racing

docker/aichallenge/: file_structure.txt  frames_2024-01-02_22.30.25.gv  frames_2024-01-02_22.31.06.gv
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: autoware_micro_awsim.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map_test.osm
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/cpp_pubsub/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sub_autoware_msg/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sub_autoware_msg/src/: path_subscriber.cpp  path_subscriber.hpp  trajectory_subscriber.cpp  trajectory_subscriber.hpp
docker/train/: Dockerfile
